--- a/KifuSF/Base.lproj/Main.storyboard
+++ b/KifuSF/Base.lproj/Main.storyboard
@@ -24,6 +24,7 @@
                     </tabBar>
                     <connections>
                         <segue destination="Wmr-U8-Jk1" kind="relationship" relationship="viewControllers" id="7x5-fS-pR8"/>
+                        <segue destination="nCY-bR-Mrg" kind="relationship" relationship="viewControllers" id="8bC-bH-xke"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="0qi-15-FKG" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -1040,13 +1041,13 @@
                                 <color key="backgroundColor" red="0.99702380950000002" green="0.99404761900000005" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                             </view>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="tbO-Dg-Paq">
-                                <rect key="frame" x="15" y="84" width="384" height="571"/>
+                                <rect key="frame" x="15" y="84" width="384" height="584.33333333333337"/>
                                 <subviews>
                                     <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9WU-nD-pUJ" userLabel="Image Frame View" customClass="GradientView" customModule="KifuSF" customModuleProvider="target">
-                                        <rect key="frame" x="118.33333333333333" y="0.0" width="147.33333333333337" height="147.33333333333334"/>
+                                        <rect key="frame" x="117" y="0.0" width="150" height="150"/>
                                         <subviews>
                                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="PWt-RW-vkg">
-                                                <rect key="frame" x="0.0" y="0.0" width="147.33333333333334" height="147.33333333333334"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="150" height="150"/>
                                             </imageView>
                                         </subviews>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -1080,7 +1081,7 @@
                                         </userDefinedRuntimeAttributes>
                                     </view>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="6ps-ej-Yuh">
-                                        <rect key="frame" x="0.0" y="163.33333333333337" width="384" height="226.66666666666663"/>
+                                        <rect key="frame" x="0.0" y="166" width="384" height="237.33333333333337"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Toilet Paper" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YjX-dE-cmC">
                                                 <rect key="frame" x="0.0" y="0.0" width="384" height="37"/>
@@ -1095,7 +1096,7 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="S2F-1n-nXf">
-                                                <rect key="frame" x="0.0" y="62.999999999999986" width="384" height="163.66666666666663"/>
+                                                <rect key="frame" x="0.0" y="62.999999999999957" width="384" height="174.33333333333337"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="@Username - 11:00" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9OP-eM-ttZ">
                                                         <rect key="frame" x="0.0" y="0.0" width="384" height="24.666666666666668"/>
@@ -1104,7 +1105,7 @@
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" verticalCompressionResistancePriority="250" editable="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="Csp-1k-FKD">
-                                                        <rect key="frame" x="0.0" y="29.666666666666686" width="384" height="134"/>
+                                                        <rect key="frame" x="0.0" y="29.666666666666686" width="384" height="144.66666666666666"/>
                                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
                                                         <fontDescription key="fontDescription" name="AvenirNext-Medium" family="Avenir Next" pointSize="17"/>
@@ -1115,7 +1116,7 @@
                                         </subviews>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="4CT-Z0-GF6">
-                                        <rect key="frame" x="0.0" y="406" width="384" height="165"/>
+                                        <rect key="frame" x="0.0" y="419.33333333333337" width="384" height="165"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="You can only have one active delivery. Check your status view for more details" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Z6O-Q4-nco">
                                                 <rect key="frame" x="0.0" y="0.0" width="384" height="55"/>
@@ -1124,7 +1125,7 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ep1-D9-I3u" userLabel="Set Location Button View" customClass="GradientView" customModule="KifuSF" customModuleProvider="target">
-                                                <rect key="frame" x="0.0" y="55" width="384" height="55"/>
+                                                <rect key="frame" x="0.0" y="54.999999999999943" width="384" height="55"/>
                                                 <subviews>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tbt-aU-raq">
                                                         <rect key="frame" x="0.0" y="0.0" width="384" height="55"/>
@@ -1165,7 +1166,7 @@
                                                 </userDefinedRuntimeAttributes>
                                             </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="eWm-me-9Oy" userLabel="Set Location Button View" customClass="GradientView" customModule="KifuSF" customModuleProvider="target">
-                                                <rect key="frame" x="0.0" y="110" width="384" height="55"/>
+                                                <rect key="frame" x="0.0" y="109.99999999999994" width="384" height="55"/>
                                                 <subviews>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="phv-2l-qSv">
                                                         <rect key="frame" x="0.0" y="0.0" width="384" height="55"/>
@@ -2671,7 +2672,17 @@
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="8TI-a9-RGS" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1991" y="418"/>
+            <point key="canvasLocation" x="2230" y="417"/>
+        </scene>
+        <!--Status-->
+        <scene sceneID="G16-sv-hCj">
+            <objects>
+                <viewControllerPlaceholder storyboardName="Status" id="nCY-bR-Mrg" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="6Yi-Rb-FoS"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="FRb-eE-tjz" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2842" y="417"/>
         </scene>
     </scenes>
     <resources>
