--- a/KifuSF/KFVDonationDescriptionCell.xib
+++ b/KifuSF/KFVDonationDescriptionCell.xib
@@ -48,37 +48,37 @@
                                                 <rect key="frame" x="0.0" y="0.0" width="304" height="120"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Toilet Paper" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="779-hc-Guk">
-                                                        <rect key="frame" x="0.0" y="0.0" width="304" height="8.5"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="304" height="4.5"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                         <nil key="textColor"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="@Pondorasti at 12:12 AM" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2Gi-44-gFf">
-                                                        <rect key="frame" x="0.0" y="8.5" width="304" height="20.5"/>
+                                                        <rect key="frame" x="0.0" y="4.5" width="304" height="20.5"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                         <nil key="textColor"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Reputation 80%" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="k92-Gw-Wmw">
-                                                        <rect key="frame" x="0.0" y="29" width="304" height="20.5"/>
+                                                        <rect key="frame" x="0.0" y="25" width="304" height="20.5"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                         <nil key="textColor"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <stackView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="249" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="mak-7C-6Ry">
-                                                        <rect key="frame" x="0.0" y="49.5" width="304" height="20.5"/>
+                                                        <rect key="frame" x="0.0" y="45.5" width="304" height="24.5"/>
                                                         <subviews>
                                                             <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="fe4-lh-kk5">
-                                                                <rect key="frame" x="0.0" y="0.0" width="152" height="20.5"/>
+                                                                <rect key="frame" x="0.0" y="0.0" width="152" height="24.5"/>
                                                                 <subviews>
                                                                     <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="DeliveryIcon" translatesAutoresizingMaskIntoConstraints="NO" id="aVX-Db-bM1">
-                                                                        <rect key="frame" x="0.0" y="0.0" width="20.5" height="20.5"/>
+                                                                        <rect key="frame" x="0.0" y="0.0" width="24.5" height="24.5"/>
                                                                         <constraints>
                                                                             <constraint firstAttribute="width" secondItem="aVX-Db-bM1" secondAttribute="height" multiplier="1:1" id="SR6-RL-b1o"/>
                                                                         </constraints>
                                                                     </imageView>
                                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="12" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ls0-yp-9aT">
-                                                                        <rect key="frame" x="28.5" y="0.0" width="123.5" height="20.5"/>
+                                                                        <rect key="frame" x="32.5" y="0.0" width="119.5" height="24.5"/>
                                                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                                         <nil key="textColor"/>
                                                                         <nil key="highlightedColor"/>
@@ -86,16 +86,16 @@
                                                                 </subviews>
                                                             </stackView>
                                                             <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="TBP-Uj-Yda">
-                                                                <rect key="frame" x="152" y="0.0" width="152" height="20.5"/>
+                                                                <rect key="frame" x="152" y="0.0" width="152" height="24.5"/>
                                                                 <subviews>
                                                                     <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="DonationIcon" translatesAutoresizingMaskIntoConstraints="NO" id="7V7-Pe-EAg">
-                                                                        <rect key="frame" x="0.0" y="0.0" width="21" height="20.5"/>
+                                                                        <rect key="frame" x="0.0" y="0.0" width="25" height="24.5"/>
                                                                         <constraints>
                                                                             <constraint firstAttribute="width" secondItem="7V7-Pe-EAg" secondAttribute="height" multiplier="1:1" id="vAN-KP-kft"/>
                                                                         </constraints>
                                                                     </imageView>
                                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="12" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3x5-tK-CTa">
-                                                                        <rect key="frame" x="29" y="0.0" width="123" height="20.5"/>
+                                                                        <rect key="frame" x="33" y="0.0" width="119" height="24.5"/>
                                                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                                         <nil key="textColor"/>
                                                                         <nil key="highlightedColor"/>
@@ -115,7 +115,7 @@
                                 </subviews>
                             </stackView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="H8k-bt-tDG">
-                                <rect key="frame" x="0.0" y="136" width="440" height="167.5"/>
+                                <rect key="frame" x="0.0" y="136" width="440" height="298"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Distance" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dmF-Ip-Qbg">
                                         <rect key="frame" x="0.0" y="0.0" width="440" height="20.5"/>
@@ -124,7 +124,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dQD-ER-8o4">
-                                        <rect key="frame" x="0.0" y="20.5" width="440" height="147"/>
+                                        <rect key="frame" x="0.0" y="20.5" width="440" height="277.5"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2.4 Miles away from you" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HWd-ag-UeX">
                                                 <rect key="frame" x="0.0" y="0.0" width="440" height="20.5"/>
@@ -143,7 +143,7 @@
                                 </subviews>
                             </stackView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="w52-jy-6Sj">
-                                <rect key="frame" x="0.0" y="319.5" width="440" height="187"/>
+                                <rect key="frame" x="0.0" y="450" width="440" height="56.5"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Description" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bpT-0e-u93">
                                         <rect key="frame" x="0.0" y="0.0" width="440" height="20.5"/>
@@ -151,10 +151,9 @@
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" editable="NO" adjustsFontForContentSizeCategory="YES" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uGA-X1-dxv">
-                                        <rect key="frame" x="0.0" y="20.5" width="440" height="166.5"/>
+                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" editable="NO" text="Alex" adjustsFontForContentSizeCategory="YES" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uGA-X1-dxv">
+                                        <rect key="frame" x="0.0" y="20.5" width="440" height="36"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
                                         <fontDescription key="fontDescription" style="UICTFontTextStyleSubhead"/>
                                         <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                     </textView>
@@ -190,6 +189,6 @@
     <resources>
         <image name="DeliveryIcon" width="20" height="14"/>
         <image name="Dog" width="1900" height="1266"/>
-        <image name="DonationIcon" width="20" height="17"/>
+        <image name="DonationIcon" width="25" height="25"/>
     </resources>
 </document>
